<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.UserRegistration_Step2">

    <TextView
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Text1"
        android:textColor="@color/cyan"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/namenext"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="494dp"
        android:text="@string/gender"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/others"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/namenext"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="436dp"
        android:text="@string/O" />

    <CheckBox
        android:id="@+id/female"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/namenext"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="437dp"
        android:text="@string/F"/>

    <CheckBox
        android:id="@+id/male"
        android:layout_width="111dp"
        android:layout_height="50dp"
        android:layout_above="@+id/namenext"
        android:layout_alignParentStart="true"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="437dp"
        android:layout_toStartOf="@+id/female"
        android:text="@string/M" />

    <EditText
        android:id="@+id/fname"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="197dp"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/phoneno"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fname"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="14dp"
        android:inputType="number"
        android:hint="@string/phno" />

    <EditText
        android:id="@+id/address"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneno"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        android:hint="@string/address" />

    <EditText
        android:id="@+id/password"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/psw"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="16dp"
        android:inputType="textPassword"
        android:hint="@string/confirm" />


    <EditText
        android:id="@+id/email"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <Button
        android:id="@+id/namenext"
        android:layout_width="225dp"
        android:layout_height="59dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="51dp"
        android:backgroundTint="@color/cyan"
        android:text="SUBMIT"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="161dp"
        android:layout_height="102dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="15dp"
        app:srcCompat="@drawable/canvas" />

</RelativeLayout>