<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/lightgrey"
    tools:context=".User.User_Registration">

    <ImageView
        android:layout_width="279dp"
        android:layout_height="207dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:id="@+id/user"
        android:src="@drawable/girly" />

    <TextView
        android:id="@+id/joinuserapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user"
        android:layout_centerHorizontal="true"
        android:text="@string/join"
        android:textColor="@color/cyan"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/wehelpuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/joinuserapp"
        android:layout_centerHorizontal="true"
        android:text="@string/text1"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/userbtn"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_below="@+id/wehelpuser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/cyan"
        android:text="@string/Next"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/useralready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:text="@string/already"
        android:textColor="@color/black"
        android:textStyle="bold" />

</RelativeLayout>