<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky"
    tools:context=".Artist.ArtistLogin">


    <ImageView
        android:id="@+id/imageartist"
        android:layout_width="274dp"
        android:layout_height="186dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="69dp"
        android:layout_marginTop="-43dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="538dp"
        android:src="@drawable/canvas" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="530dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="10dp"
        android:background="@color/lightgrey"
        android:backgroundTint="@color/lightgrey"
        android:elevation="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artistlogin"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/cyan"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/Registeryouraccount"
            android:layout_width="317dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="60dp"
            android:text="@string/Text"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Registeryouraccount"
            android:layout_marginTop="170dp"
            android:ems="10"
            android:hint="@string/enteremail"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:ems="10"
            android:hint="@string/enterpsw"
            android:inputType="textPassword"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/forgotpsw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="320dp"
            android:text="@string/forgot"
            android:textColor="@color/cyan"
            android:textSize="20sp" />

        <Button
            android:id="@+id/signup"
            android:layout_width="123dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="375dp"
            android:backgroundTint="@color/cyan"
            android:text="@string/signup"
            android:textSize="20sp" />

        <Button
            android:id="@+id/alogin"
            android:layout_width="123dp"
            android:layout_height="60dp"
            android:layout_marginLeft="223dp"
            android:layout_marginTop="375dp"
            android:backgroundTint="@color/white"
            android:text="@string/login"
            android:textColor="@color/cyan"
            android:textSize="20sp" />


    </androidx.cardview.widget.CardView>
</RelativeLayout>